--- a/_includes/js.html
+++ b/_includes/js.html
@@ -20,6 +20,10 @@
 <!-- Custom Theme JavaScript -->
 <script src="{{ " js/freelancer.js" }}"></script>
 
+
+<!-- WebGL JavaScript -->
+<script src="{{ " js/webgl.js" }}"></script>
+
 {% if site.contact == "disqus" %}
 <!-- Disqus Stuff -->
 {% include js_disqus.html %}
