--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,9 @@
 
 <body id="page-top" class="index">
   {% include nav.html %}
+  
 </div id="page-contents">
+  {% include glsl.html %}
   {% include header.html %}
   {% include portfolio_grid.html %}
   {% include skills.html %}
