--- a/_includes/contact_disqus.html
+++ b/_includes/contact_disqus.html
@@ -4,12 +4,15 @@
     <div class="row">
       <div class="col-lg-12 text-center">
         <h2>Find Me On</h2>
-        <hr class="star-primary">
+        <hr class="star-light">
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-8 col-lg-offset-2">
-        <div id="disqus_thread"></div><!-- /#disqus_thread -->
+      <div class="link-icons">
+        <a href="https://github.com/OKEkirby"> <i class='bx bxl-github' id = "github-icon"></i> </a>
+        <a href="https://twitter.com/okie_kirby"> <i class='bx bxl-twitter' id = "twitter-icon" ></i> </a>
+        <a href="mailto:willparkin1@gmail.com"> <i class='bx bx-envelope' id = "email-icon"  ></i> </a>
+        <a href=""> <i class='bx bxl-linkedin' id = "linkedin-icon"  ></i> </a>
       </div>
     </div>
   </div>
